Fix ui jumping on copy referral (#831)

--- a/audius-client/packages/web/src/pages/audio-rewards-page/components/modals/ChallengeRewards.module.css
+++ b/audius-client/packages/web/src/pages/audio-rewards-page/components/modals/ChallengeRewards.module.css
@@ -242,11 +242,6 @@
   width: 100%;
 }
 
-.toast {
-  left: 50%;
-  transform: translateX(-50%);
-}
-
 /* Profile Tasks Styles */
 .profileTaskContainer {
   display: flex;
